test_translator/tests/data/checkpoint_2/errors/02_missing_counter_entrypoint/solution.py
from collections import Counter


def wrong_name():
    return Counter("hello")
